Fixing up header. Also adding some detail to the my story section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1397,7 +1397,7 @@
 	}
 
 	body {
-		background: #2e3842;
+		background: #2d2d2d;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1486,14 +1486,14 @@
 		}
 
 	h2 {
-		font-size: 1.85em;
+		font-size: 2.75em;
 		line-height: 1.25em;
 	}
 
 		@media screen and (max-width: 736px) {
 
 			h2 {
-				font-size: 1.6em;
+				font-size: 2em;
 				line-height: 1.15em;
 			}
 
@@ -1620,7 +1620,6 @@
 	}
 
 		header.major h2, header.major h3, header.major h4, header.major h5, header.major h6 {
-			border-bottom: solid 2px #fff;
 			display: inline-block;
 			padding-bottom: 1em;
 			position: relative;
@@ -1646,10 +1645,6 @@
 		}
 
 	@media screen and (max-width: 980px) {
-
-		header br {
-			display: none;
-		}
 
 	}
 
@@ -3413,6 +3408,7 @@
 			position: relative;
 			z-index: 1;
 			margin: 0 0 0.5em 0;
+			text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
 		}
 
 			#banner h2:before, #banner h2:after {
@@ -3430,6 +3426,7 @@
 				height: 2px;
 				position: absolute;
 				width: 100%;
+				box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
 			}
 
 			#banner h2:before {
@@ -3446,6 +3443,7 @@
 			margin: 0 0 1em 0;
 			letter-spacing: 0.225em;
 			text-transform: uppercase;
+			text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.75);
 		}
 
 			#banner p a {
@@ -3796,10 +3794,7 @@
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
+		background-image: url("../../images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3817,10 +3812,7 @@
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.75), rgba(156,125,185,0.75)), url("../../images/banner.jpg");
+		background-image: url("../../images/banner.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -3997,10 +3989,7 @@
 .cd-timeline-content {
   position: relative;
   margin-left: 60px;
-  background: white;
-  border-radius: 0.25em;
   padding: 1em;
-  box-shadow: 0 3px 0 #d7e4ed;
 }
 .cd-timeline-content:after {
   content: "";
@@ -4235,3 +4224,24 @@
     transform: translateX(0);
   }
 }
+
+/* ===================
+
+Custom CSS
+
+==================== */
+.our-story {
+	padding-top: 1em;
+	background-color: #2d2d2d;
+}
+
+	.our-story .seilie-family img,
+	.our-story .ishikawa-family img {
+	}
+
+	.our-story .seilie-family {
+		float: left;
+	}
+	.our-story .ishikawa-family {
+		float: right;
+	}
