--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1397,7 +1397,7 @@
 	}
 
 	body {
-		background: #2d2d2d;
+		background: url('../../images/header-bg.jpg') repeat left top transparent;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -3516,7 +3516,7 @@
 			left: 0;
 			top: 0;
 			opacity: 0;
-			background: url('../../images/header-bg.png') repeat left top transparent;
+			background: url('../../images/header-bg.jpg') repeat left top transparent;
 		}
 
 		#banner .puffin {
