--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1397,7 +1397,7 @@
 	}
 
 	body {
-		background: url('../../images/header-bg.jpg') repeat left top transparent;
+		background: #fff;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
