Changing header bg color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3248,7 +3248,7 @@
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #403B56;
+		background: #9c7db9;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
