--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3392,6 +3392,8 @@
 	}
 
 		#banner h2 {
+			border-top: 1px solid #fff;
+			border-bottom: 1px solid #fff;
 			-moz-transform: scale(1);
 			-webkit-transform: scale(1);
 			-ms-transform: scale(1);
@@ -3409,7 +3411,7 @@
 			margin: 0 0 0.5em 0;
 			text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 		}
-
+/*
 			#banner h2:before, #banner h2:after {
 				-moz-transition: width 0.85s ease;
 				-webkit-transition: width 0.85s ease;
@@ -3437,7 +3439,7 @@
 				bottom: 0;
 				right: 0;
 			}
-
+*/
 		#banner p {
 			margin: 0 0 1em 0;
 			letter-spacing: 0.225em;
