--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4364,3 +4364,12 @@ Custom CSS
 			width: 100%;
 		}
 	}
+
+.map {
+	height: 600px;
+}
+@media only screen and (max-width: 480px) {
+	.map {
+		height: 400px;
+	}
+}
