--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2236,7 +2236,6 @@
 		font-size: 0.8em;
 		font-weight: 600;
 		height: 3.125em;
-		letter-spacing: 0.225em;
 		line-height: 3.125em;
 		padding: 0 2.75em;
 		text-align: center;
@@ -3636,10 +3635,10 @@
 
 	#main > header {
 		padding: 12em 0 10em 0 ;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("../../images/banner.jpg");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("../../images/banner.jpg");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("../../images/banner.jpg");
-		background-image: linear-gradient(top, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3786,7 +3785,10 @@
 /* Landing */
 
 	body.landing #page-wrapper {
-		background-image: url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
 		background-attachment: fixed;
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -3804,7 +3806,10 @@
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
-		background-image: url("../../images/banner.jpg");
+		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
+		background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.50)), url("../../images/banner.jpg");
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: cover;
@@ -4368,8 +4373,23 @@ Custom CSS
 .map {
 	height: 600px;
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 736px) {
 	.map {
-		height: 400px;
+		height: 450px;
 	}
 }
+@media only screen and (max-width: 480px) {
+	.map {
+		height: 300px;
+	}
+}
+
+.registry h2 {
+	margin-top: -0.65em;
+}
+.registry p {
+	padding: 0;
+}
+	.registry header p {
+		color: rgba(255, 255, 255, 1.0)
+	}
